--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Sense Watcher</string>
-    <string name="title_activity_results">ResultsActivity</string>
+    <string name="title_activity_results">Results Activity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_anomalies">AnomaliesActivity</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -90,5 +92,4 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
-    <string name="action_settings">Settings</string>
 </resources>
